[package]
name = "gigatron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta = "0.8.2"
enum-display-derive = "0.1.1"
glium = "0.32.1"
imgui = { version = "0.11.0", features = ["docking", "tables-api"] }
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
itertools = "0.10.5"
packed_struct = "0.10.1"
rand = "0.8.5"
winit = { version = "0.27.5", features = ["x11"] }
